--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "cross-env DEV_MODE=development vite",
     "build": "cross-env DEV_MODE=production vite build",
+    "test": "jest",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -14,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@reduxjs/toolkit": "^2.2.3",
+    "@testing-library/react": "^15.0.7",
     "antd": "^5.16.2",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
@@ -23,6 +25,8 @@
     "sass": "^1.74.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.5.0",
@@ -30,6 +34,8 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "jest": "^29.7.0",
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0"
   }
 }
