--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "^5.3.6",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@paypal/react-paypal-js": "^8.3.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/react": "^15.0.7",
     "antd": "^5.16.2",
