--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,7 +5,6 @@ autobahn==23.6.2
 Automat==22.10.0
 billiard==4.2.0
 bleach==6.1.0
-celery==5.4.0
 certifi==2024.2.2
 cffi==1.16.0
 channels==4.1.0
@@ -18,6 +17,7 @@ colorama==0.4.6
 constantly==23.10.4
 cryptography==42.0.5
 daphne==4.1.2
+decorator==5.1.1
 Django==5.0.4
 django-cors-headers==4.3.1
 django-filter==24.2
@@ -25,6 +25,8 @@ django-jazzmin==3.0.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
 drf_api_logger==1.1.15
+future==1.0.0
+geocoder==1.38.1
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
@@ -37,8 +39,11 @@ pycparser==2.22
 PyJWT==2.8.0
 pyOpenSSL==24.1.0
 python-dateutil==2.9.0.post0
+python-http-client==3.3.7
 PyYAML==6.0.1
+ratelim==0.1.6
 requests==2.32.3
+sendgrid==3.6.5
 service-identity==24.1.0
 six==1.16.0
 sqlparse==0.5.0
